Bug 1904316 - AB: Tweak the z-index of the pseudo elements to not interfere with the dialog backdrop. r=freaktechnik
Differential Revision: https://phabricator.services.mozilla.com/D214706

--HG--
extra : amend_source : 7da6d3ecd8c0d46d27fa0b4dd2ab2dadb2275dd1

--- a/mail/themes/shared/mail/containers.css
+++ b/mail/themes/shared/mail/containers.css
@@ -33,19 +33,18 @@
       width: 100%;
       height: 4px;
       pointer-events: none;
+      /* push in front of any normal layer list content */
+      z-index: 1;
     }
 
     &::before {
       position: sticky;
       background-image: radial-gradient(farthest-side at 50% 0, rgba(0, 0, 0, .15), rgba(0, 0, 0, 0));
-      /* push in front of any normal layer list content */
-      z-index: 2;
     }
 
     &::after {
       position: absolute;
       background-color: var(--sidebar-background);
-      z-index: 3;
     }
   }
 }
